tests/errors/type_check/control_flow/switch_enum_unknown_variant.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f(o: Option) {
            entry:
            switchEnum(o) [Wat: end]
            end:
            return
        }
        