tests/errors/type_check/control_flow/switch_enum_unknown_variant.err.expected
error: at 5:13: [TC-SwitchArmUnknownVariant] In function 'f', block 'entry': variant 'Wat' is not part of enum 'Option'
   |
 5 |             switchEnum(o) [Wat: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:13: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'None'
   |
 5 |             switchEnum(o) [Wat: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:13: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'Some'
   |
 5 |             switchEnum(o) [Wat: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
